2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html (My libgcj build fails with "invalid use of undefined
	type struct sigcontext_struct"): Remove.

2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html: Replace references to sources.redhat.com by
	sourceware.org.
	Avoid a reference to CVS.
	Some style adjustments to the February 8, 2001 entry.

2011-11-01  Gerald Pfeifer  <gerald@pfeifer.com>

	* status.html: Use <h2> instead of fake tables.

2011-10-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* build-snapshot.html: Adjust title to not refer to CVS any more.
	Adjust formatting of title.
	Change link from CVS instructions to SVN.

2011-10-29  Gerald Pfeifer  <gerald@pfeifer.com>

	* done.html: Use <th> for the header.

2011-05-15  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html:  Use <h2>, not fake tables for section headers.

2011-05-13  Gerald Pfeifer  <gerald@pfeifer.com>

	* docs.html: Use regular <h2> markup for section headers.

2011-05-13  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* projects.html: Update name of java mailing list.
	(Plugin for Mozilla): Remove section.
	(Compiler Improvements): Remove tree inlining item.
	(Benchmark infrastructure): Remove reference to jMocha.

2011-04-26  Gerald Pfeifer  <gerald@pfeifer.com>

	* projects.html: Use regular <h2> markup for section headers
	instead of fake tables.

2011-04-25  Gerald Pfeifer  <gerald@pfeifer.com>

	* contrib.html: Use regular <h2> markup for section headers
	instead of fake tables.

2010-09-19  Gerald Pfeifer  <gerald@pfeifer.com>

	* news.html (December 9, 2000): Adjust fastjar URL.

2010-09-12  Gerald Pfeifer  <gerald@pfeifer.com>

	* done.html (pdftk): Adjust URL.

2009-10-20  Dave Korn  <dave.korn.cygwin@gmail.com>

	* index.html: Mention recent windows updates.

2009-10-10  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Rework reference to "other OpenSource projects".

2009-04-04  Gerald Pfeifer  <gerald@pfeifer.com>
