@@ -66,7 +66,6 @@
             <li><a href="#5_5">How do I increase the runtime's initial and maximum 
               heap sizes?</a></li>
             <li><a href="#5_6">How can I profile my application?</a></li>
-            <li><a href="#5_7">My program seems to hang and doesn't produce any output</a></li>
           </ol>
         </li>
         <li><a href="#6_0">Programming Issues</a> 
@@ -527,18 +526,6 @@ $ ../configure [...]
         </dd>
       </dl>
       
-      <hr />  
-      <h3><a name="5_7">5.7 My program seems to hang and doesn't produce any output</a></h3>
-      <dl>
-        <dd>
-          <p>Some versions had a bug in the iconv support. You can work around
-          it by setting <tt>LANG=en_US.UTF-8</tt> at runtime, or give the
-          following option during compile time
-          <tt>-Dfile.encoding=UTF-8</tt>.  This problem should no longer
-          occur as of November 1, 2000.</p>
-        </dd>
-      </dl>
-
       <h2><a name="6_0"></a>Programming Issues</h2>
 
       <h3><a name="6_1"></a>6.1 Are there any examples of how to use CNI?</h3>
