@@ -1,3 +1,7 @@
+2012-10-27  Gerald Pfeifer  <gerald@pfeifer.com>
+
+	* faq.html (My program seems to hang): Remove.
+
 2012-10-21  Gerald Pfeifer  <gerald@pfeifer.com>
 
 	* faq.html (My libgcj build fails with "invalid use of undefined
